Add content to the Banana Milkshake and Beer.

--- a/pages/recipe2.html
+++ b/pages/recipe2.html
@@ -9,6 +9,21 @@
 <body>
 <h1>Banana Milkshake</h1>
 <img src="https://de.rc-cdn.community.thermomix.com/recipeimage/43k7q5me-f8f1f-397146-cfcd2-gex5zys0/a3e0785c-14b0-449c-843e-f5681ef5818f/main/bananen-milkshake.jpg" alt="A picture of a Banana Milkshake">
+
+<h2>Description</h2>
+A bananamilkshake is a sweet blend of bananas and milk.
+
+<h2>Ingredients</h2>
+<ul>
+    <li>2 bananas</li>
+    <li>1/2 litre milk</li>
+</ul>
+<h2>Steps</h2>
+<ol>
+    <li>Put the milk and the bananas into a bowl.</li>
+    <li>Blend the with a mixer.</li>
+    <li>Enjoy your drink. </li>
+</ol>
 </body>
 
 </html>
