--- a/pages/recipe3.html
+++ b/pages/recipe3.html
@@ -9,6 +9,19 @@
 <body>
 <h1>Beer</h1>
 <img src="https://brouwland.com/img/cms/Cat_Beer.jpg" alt="A picture of two Beers">
+
+<h2>Description</h2>
+Beer is nice, drink more beer!
+<h2>Ingredients</h2>
+<ul>
+    <li>A bottle of beer</li>
+    <li>Something to open the beer</li>
+</ul>
+<h2>Steps</h2>
+<ol>
+    <li>Open the beer with your beer opening device</li>
+    <li>Drink more beer</li>
+</ol>
 </body>
 
 </html>
