correction sentence blend

--- a/pages/recipe2.html
+++ b/pages/recipe2.html
@@ -21,7 +21,7 @@ A bananamilkshake is a sweet blend of bananas and milk.
 <h2>Steps</h2>
 <ol>
     <li>Put the milk and the bananas into a bowl.</li>
-    <li>Blend the with a mixer.</li>
+    <li>Blend the ingredients.</li>
     <li>Enjoy your drink. </li>
 </ol>
 </body>
